--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "name": "movies-explorer-api",
   "description": "diplom",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js ",
