--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,14 @@
 {
   "extends": [
-    "airbnb-base"],
+    "airbnb-base"
+  ],
+  "plugins": [
+    "import"
+  ],
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "import/no-unresolved": "off",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
   }
 }
-
 
