--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,8 @@
 {
   "extends": [
-    "airbnb-base"
-  ],
-  "plugins": [
-    "import"
-  ],
+    "airbnb-base"],
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "import/no-unresolved": "off",
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
+    "no-underscore-dangle": ["error",{"allow":["_id", "_doc"]}],
+    "linebreak-style": 0
   }
 }
-
