--- a/.env.common
+++ b/.env.common
@@ -1,2 +1,4 @@
-NODE_ENV='production';
-JWT_SECRET='some-secret-key-production';
+PORT=3000
+NODE_ENV='production'
+JWT_SECRET='some-secret-key-production'
+DATABASE_URL=mongodb://127.0.0.1:27017/bitfilmsdb
